# agentify-release

./: .gitignore  .mcp.json  .vscodeignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/ISSUE_TEMPLATE/: feature_request.md
agent-os/: config.yml
agent-os/product/: architecture.md  demo-development-workflow.md  development-guide.md  mission.md  roadmap.md  tech-stack.md
docs/: GETTING_STARTED.md  IDEATION_SCENARIOS.md
docs/quick-suite-advisor/: README.md  concept.md  discovery-questions.md  persona-instructions.md  quickstart-guide.md  scenario-suggestions.md  wizard-reference.md
infrastructure/: dynamodb-table.yaml
public-release/: CHANGELOG.md  README.md
public-release/docs/: .gitkeep
public-release/releases/: agentify-0.2.0.vsix  agentify-0.3.0.vsix
resources/agentify-hooks/: agent-gateway-validator.kiro.hook  agent-pattern.kiro.hook  agent-prompt-validator.kiro.hook  cli-contract-validator.kiro.hook  gateway-handler.kiro.hook  (+10 more)
resources/cdk/: README.md  app.py  cdk.json  config.py  pyproject.toml
resources/cdk/cdk.out/: Agentify-Networking-us-east-1.assets.json  Agentify-Networking-us-east-1.template.json  Agentify-Observability-us-east-1.assets.json  Agentify-Observability-us-east-1.template.json  manifest.json  tree.json
resources/cdk/gateway/: cleanup_gateway.py  setup_gateway.py
resources/cdk/gateway/handlers/: .gitkeep
resources/cdk/stacks/: __init__.py  gateway_tools.py  networking.py  observability.py
scripts/: install-local.sh  release.sh
src/: extension.ts  statusBar.ts
(+442 files in other folders)
